--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body{
   position:fixed;
   inset:0;
   background:url('her-photo.jpg') center/cover no-repeat;
-  filter:blur(10px) brightness(0.55);
+  filter:brightness(0.6);
   z-index:-2;
 }
 .overlay{
@@ -268,3 +268,4 @@ setInterval(()=>{
 
 </body>
 </html>
+
