--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <style>
 :root{
-  --her-name:"Rashmi Kunwar";
+  --her-name:"Her Name";
 }
 
 body{
@@ -331,3 +331,4 @@ modeToggle.onclick=()=>{
 
 </body>
 </html>
+
